--- a/style.production.css
+++ b/style.production.css
@@ -4,8 +4,6 @@
 * Autoprefixer: v10.4.7
 * Browsers: last 50 version
 */
-
-
 /* ###
 - redo the design info by choosing proper colours and fonts
 - when that is done, change
@@ -13,7 +11,6 @@
       2. the font family names in css
       3. colours in css
 ###  */
-
 /*
 Design info (preliminary)
 Colours to be used in the styling of my portfolio site are:
@@ -26,13 +23,19 @@ Typography to be used in the styling of my portfolio site are:
 Primary font: Dancing Script
 secondary font: Palanquin
 */
-
-
-:root { /* gold */ /* linden green */ /* soft dark grey */ /* white */ /* off-white */ /* dark-gold */ /* light gold */ /* light linden green */ /* blue */
+:root {
+  /* gold */
+  /* linden green */
+  /* soft dark grey */
+  /* white */
+  /* off-white */
+  /* dark-gold */
+  /* light gold */
+  /* light linden green */
+  /* blue */
 }
 
 /* //Styling concering all the pages of the website // */
-
 /* Styling the body in general */
 body {
   background-color: #fdfcfb;
@@ -47,7 +50,7 @@ body {
 as opposed to adding it to the specified width */
 * {
   -webkit-box-sizing: border-box;
-          box-sizing: border-box;
+  box-sizing: border-box;
 }
 
 /* Styling the header within the body*/
@@ -60,26 +63,26 @@ as opposed to adding it to the specified width */
   width: 100%;
   -webkit-box-pack: justify;
   -webkit-justify-content: space-between;
-      -ms-flex-pack: justify;
-          justify-content: space-between;
+  -ms-flex-pack: justify;
+  justify-content: space-between;
   -webkit-box-align: center;
   -webkit-align-items: center;
-      -ms-flex-align: center;
-          align-items: center;
+  -ms-flex-align: center;
+  align-items: center;
 }
 
 .page-header__item {
   -webkit-box-flex: 0;
   -webkit-flex: 0 1 200px;
-      -ms-flex: 0 1 200px;
-          flex: 0 1 200px;
+  -ms-flex: 0 1 200px;
+  flex: 0 1 200px;
 }
 
 .page-header .page-header__item:last-child {
   -webkit-box-flex: 1;
   -webkit-flex-grow: 1;
-      -ms-flex-positive: 1;
-          flex-grow: 1;
+  -ms-flex-positive: 1;
+  flex-grow: 1;
   text-align: right;
 }
 
@@ -95,11 +98,11 @@ as opposed to adding it to the specified width */
   font-size: 20px;
   -webkit-box-flex: 1;
   -webkit-flex-grow: 1;
-      -ms-flex-positive: 1;
-          flex-grow: 1;
+  -ms-flex-positive: 1;
+  flex-grow: 1;
   -webkit-flex-shrink: 1;
-      -ms-flex-negative: 1;
-          flex-shrink: 1;
+  -ms-flex-negative: 1;
+  flex-shrink: 1;
 }
 
 /* This will remove the underline from the nav link of the active page*/
@@ -125,8 +128,8 @@ as opposed to adding it to the specified width */
   -webkit-box-orient: vertical;
   -webkit-box-direction: normal;
   -webkit-flex-direction: column;
-      -ms-flex-direction: column;
-          flex-direction: column;
+  -ms-flex-direction: column;
+  flex-direction: column;
   text-align: center;
 }
 
@@ -190,12 +193,13 @@ button {
   color: #ffffff;
   padding: 10px;
   -webkit-border-radius: 3px;
-          border-radius: 3px;
+  border-radius: 3px;
   border-bottom: 2px solid rgba(0, 0, 0, 0.3);
   -webkit-transition: 0.3s opacity;
   -o-transition: 0.3s opacity;
   transition: 0.3s opacity;
 }
+
 .button {
   border: none;
   font-family: inherit;
@@ -205,7 +209,7 @@ button {
   color: #ffffff;
   padding: 10px;
   -webkit-border-radius: 3px;
-          border-radius: 3px;
+  border-radius: 3px;
   border-bottom: 2px solid rgba(0, 0, 0, 0.3);
   -webkit-transition: 0.3s opacity;
   -o-transition: 0.3s opacity;
@@ -230,7 +234,6 @@ button:hover, button:focus, .button:hover, .button:focus {
 }
 
 /*  // Styling concerning multiple but not all the pages of the website // */
-
 /* This styles the portraits on home and about page */
 .profile__portrait {
   float: left;
@@ -238,18 +241,17 @@ button:hover, button:focus, .button:hover, .button:focus {
   width: 250px;
   height: auto;
   -webkit-border-radius: 50%;
-          border-radius: 50%;
+  border-radius: 50%;
   margin-bottom: 10px;
 }
-
 
 /*  // Styling concerning just one page of the website // */
 /* Styling concerning just the home page */
 .profile-section__paragraph {
   -webkit-box-flex: 1;
   -webkit-flex: 1 1 100px;
-      -ms-flex: 1 1 100px;
-          flex: 1 1 100px;
+  -ms-flex: 1 1 100px;
+  flex: 1 1 100px;
 }
 
 #text__fullstack-web-developer {
@@ -261,8 +263,8 @@ button:hover, button:focus, .button:hover, .button:focus {
 .about-section__paragraph {
   -webkit-box-flex: 1;
   -webkit-flex: 1 1 100px;
-      -ms-flex: 1 1 100px;
-          flex: 1 1 100px;
+  -ms-flex: 1 1 100px;
+  flex: 1 1 100px;
 }
 
 .about-section__table {
@@ -271,11 +273,10 @@ button:hover, button:focus, .button:hover, .button:focus {
 }
 
 /* Styling concerning just the contact page */
-
 #contact-section__image {
   float: left;
   -webkit-border-radius: 3%;
-          border-radius: 3%;
+  border-radius: 3%;
   width: 300px;
   height: auto;
   margin-right: 30px;
@@ -285,8 +286,8 @@ button:hover, button:focus, .button:hover, .button:focus {
 .contact-section__paragraph {
   -webkit-box-flex: 1;
   -webkit-flex: 1 1 100px;
-      -ms-flex: 1 1 100px;
-          flex: 1 1 100px;
+  -ms-flex: 1 1 100px;
+  flex: 1 1 100px;
   font-size: large;
 }
 
@@ -312,7 +313,7 @@ button:hover, button:focus, .button:hover, .button:focus {
 }
 
 /* This is the fallback option for the browsers that cannot use grid */
-.grid__item{
+.grid__item {
   display: inline-block;
   width: 33%;
 }
@@ -327,16 +328,18 @@ button:hover, button:focus, .button:hover, .button:focus {
     display: -ms-grid;
     display: grid;
     -ms-grid-columns: 1fr 20px 1fr 20px 1fr 20px 1fr;
-    grid-template-columns: 1fr 1fr 1fr 1fr; /* !!! maybe change this to just 3 1frs */
+    grid-template-columns: 1fr 1fr 1fr 1fr;
+    /* !!! maybe change this to just 3 1frs */
     grid-gap: 20px;
   }
 
   /* The following styles the grid items */
   .project-list__item {
-    background-color: #DFECEB;  /* maybe use #e6decb or #bfd9d7 */
+    background-color: #DFECEB;
+    /* maybe use #e6decb or #bfd9d7 */
     padding: 20px 30px 35px;
     -webkit-border-radius: 30px;
-            border-radius: 30px;
+    border-radius: 30px;
     width: auto;
     min-height: auto;
     margin: 0;
@@ -344,10 +347,12 @@ button:hover, button:focus, .button:hover, .button:focus {
 
   .project-list__item:last-child {
     -ms-grid-column: 4;
-    grid-column: 4/ 4; /* !!! maybe change this to 3 /3 */
+    grid-column: 4/ 4;
+    /* !!! maybe change this to 3 /3 */
     -ms-grid-row: 1;
     -ms-grid-row-span: 3;
-    grid-row: 1 / 4; /* !!! maybe change this to 1 / 3 */
+    grid-row: 1 / 4;
+    /* !!! maybe change this to 1 / 3 */
   }
 }
 
@@ -386,7 +391,6 @@ button:hover, button:focus, .button:hover, .button:focus {
   }
 }
 
-
 /*
 ###
 - styling for svg animation on about page, should be changed for final project as I want a different city attached to my site
@@ -396,20 +400,25 @@ button:hover, button:focus, .button:hover, .button:focus {
   0% {
     fill: #edc655;
   }
+
   50% {
     fill: #fcffad;
   }
+
   100% {
     fill: #f76414;
   }
 }
+
 @keyframes sun-color-change {
   0% {
     fill: #edc655;
   }
+
   50% {
     fill: #fcffad;
   }
+
   100% {
     fill: #f76414;
   }
@@ -417,83 +426,88 @@ button:hover, button:focus, .button:hover, .button:focus {
 
 .sun {
   -webkit-animation-duration: 7s;
-          animation-duration: 7s;
+  animation-duration: 7s;
   -webkit-animation-name: sun-color-change;
-          animation-name: sun-color-change;
+  animation-name: sun-color-change;
   -webkit-animation-iteration-count: infinite;
-          animation-iteration-count: infinite;
+  animation-iteration-count: infinite;
   -webkit-animation-direction: alternate;
-          animation-direction: alternate;
+  animation-direction: alternate;
   -webkit-animation-timing-function: linear;
-          animation-timing-function: linear;
+  animation-timing-function: linear;
 }
 
 /* what am I doing wrong here?? I cannot animate the clouds*/
 @-webkit-keyframes cloud-front-moving {
   from {
     -webkit-transform: translate(0px, 50px);
-            transform: translate(0px, 50px);
+    transform: translate(0px, 50px);
   }
+
   to {
     -webkit-transform: translate(200px, 50px);
-            transform: translate(200px, 50px);
+    transform: translate(200px, 50px);
   }
 }
+
 @keyframes cloud-front-moving {
   from {
     -webkit-transform: translate(0px, 50px);
-            transform: translate(0px, 50px);
+    transform: translate(0px, 50px);
   }
+
   to {
     -webkit-transform: translate(200px, 50px);
-            transform: translate(200px, 50px);
+    transform: translate(200px, 50px);
   }
 }
 
 .cloud-front {
   -webkit-animation-duration: 30s;
-          animation-duration: 30s;
+  animation-duration: 30s;
   -webkit-animation-name: cloud-front-moving;
-          animation-name: cloud-front-moving;
+  animation-name: cloud-front-moving;
   -webkit-animation-iteration-count: infinite;
-          animation-iteration-count: infinite;
+  animation-iteration-count: infinite;
   -webkit-animation-direction: alternate;
-          animation-direction: alternate;
+  animation-direction: alternate;
   -webkit-animation-timing-function: linear;
-          animation-timing-function: linear;
+  animation-timing-function: linear;
 }
 
 @-webkit-keyframes cloud-back-move {
   from {
     -webkit-transform: translate(446px, 48px);
-            transform: translate(446px, 48px);
+    transform: translate(446px, 48px);
   }
+
   to {
     -webkit-transform: translate(100px, 48px);
-            transform: translate(100px, 48px);
+    transform: translate(100px, 48px);
   }
 }
 
 @keyframes cloud-back-move {
   from {
     -webkit-transform: translate(446px, 48px);
-            transform: translate(446px, 48px);
+    transform: translate(446px, 48px);
   }
+
   to {
     -webkit-transform: translate(100px, 48px);
-            transform: translate(100px, 48px);
+    transform: translate(100px, 48px);
   }
 }
 
 .cloud-back {
   -webkit-animation-duration: 30s;
-          animation-duration: 30s;
+  animation-duration: 30s;
   -webkit-animation-name: cloud-back-move;
-          animation-name: cloud-back-move;
+  animation-name: cloud-back-move;
   -webkit-animation-iteration-count: infinite;
-          animation-iteration-count: infinite;
+  animation-iteration-count: infinite;
   -webkit-animation-direction: alternate;
-          animation-direction: alternate;
+  animation-direction: alternate;
   -webkit-animation-timing-function: linear;
-          animation-timing-function: linear;
+  animation-timing-function: linear;
 }
