--- a/css/styles.css
+++ b/css/styles.css
@@ -1,3 +1,4 @@
+
 /* ###
 - redo the design info by choosing proper colours and fonts
 - when that is done, change
@@ -5,6 +6,7 @@
       2. the font family names in css
       3. colours in css
 ###  */
+
 /*
 Design info (preliminary)
 Colours to be used in the styling of my portfolio site are:
@@ -17,25 +19,18 @@ Typography to be used in the styling of my portfolio site are:
 Primary font: Dancing Script
 secondary font: Palanquin
 */
+
+
 :root {
-  --primary-colour: #AE9152;
-  /* gold */
-  --secondary-colour: #BFD9D7;
-  /* linden green */
-  --text-colour-dark: #353745;
-  /* soft dark grey */
-  --text-colour-light: #ffffff;
-  /* white */
-  --background-colour: #fdfcfb;
-  /* off-white */
-  --primary-colour-dark: #796539;
-  /* dark-gold */
-  --primary-colour-light: #CAAA64;
-  /* light gold */
-  --secondary-colour-light: #DFECEB;
-  /* light linden green */
-  --link-colour-active: #3b44f6;
-  /* blue */
+  --primary-colour: #AE9152; /* gold */
+  --secondary-colour: #BFD9D7; /* linden green */
+  --text-colour-dark: #353745; /* soft dark grey */
+  --text-colour-light: #ffffff; /* white */
+  --background-colour: #fdfcfb; /* off-white */
+  --primary-colour-dark: #796539; /* dark-gold */
+  --primary-colour-light: #CAAA64; /* light gold */
+  --secondary-colour-light: #DFECEB; /* light linden green */
+  --link-colour-active: #3b44f6; /* blue */
   --font-size-main: 16px;
   --font-size-footer-heading: 18px;
   --font-size-navigation__item: 20px;
@@ -47,6 +42,7 @@ secondary font: Palanquin
 }
 
 /* //Styling concering all the pages of the website // */
+
 /* Styling the body in general */
 body {
   background-color: var(--background-colour);
@@ -198,6 +194,7 @@ button:hover, button:focus, .button:hover, .button:focus {
 }
 
 /*  // Styling concerning multiple but not all the pages of the website // */
+
 /* This styles the portraits on home and about page */
 .profile__portrait {
   float: left;
@@ -207,6 +204,7 @@ button:hover, button:focus, .button:hover, .button:focus {
   border-radius: 50%;
   margin-bottom: 10px;
 }
+
 
 /*  // Styling concerning just one page of the website // */
 /* Styling concerning just the home page */
@@ -230,6 +228,7 @@ button:hover, button:focus, .button:hover, .button:focus {
 }
 
 /* Styling concerning just the contact page */
+
 #contact-section__image {
   float: left;
   border-radius: 3%;
@@ -266,7 +265,7 @@ button:hover, button:focus, .button:hover, .button:focus {
 }
 
 /* This is the fallback option for the browsers that cannot use grid */
-.grid__item {
+.grid__item{
   display: inline-block;
   width: 33%;
 }
@@ -279,15 +278,13 @@ button:hover, button:focus, .button:hover, .button:focus {
 @supports (display: grid) {
   .project-list {
     display: grid;
-    grid-template-columns: 1fr 1fr 1fr 1fr;
-    /* !!! maybe change this to just 3 1frs */
+    grid-template-columns: 1fr 1fr 1fr 1fr; /* !!! maybe change this to just 3 1frs */
     grid-gap: 20px;
   }
 
   /* The following styles the grid items */
   .project-list__item {
-    background-color: var(--secondary-colour-light);
-    /* maybe use #e6decb or #bfd9d7 */
+    background-color: var(--secondary-colour-light);  /* maybe use #e6decb or #bfd9d7 */
     padding: 20px 30px 35px;
     border-radius: 30px;
     width: auto;
@@ -296,10 +293,8 @@ button:hover, button:focus, .button:hover, .button:focus {
   }
 
   .project-list__item:last-child {
-    grid-column: 4/ 4;
-    /* !!! maybe change this to 3 /3 */
-    grid-row: 1 / 4;
-    /* !!! maybe change this to 1 / 3 */
+    grid-column: 4/ 4; /* !!! maybe change this to 3 /3 */
+    grid-row: 1 / 4; /* !!! maybe change this to 1 / 3 */
   }
 }
 
@@ -336,6 +331,7 @@ button:hover, button:focus, .button:hover, .button:focus {
   }
 }
 
+
 /*
 ###
 - styling for svg animation on about page, should be changed for final project as I want a different city attached to my site
@@ -345,11 +341,9 @@ button:hover, button:focus, .button:hover, .button:focus {
   0% {
     fill: #edc655;
   }
-
   50% {
     fill: #fcffad;
   }
-
   100% {
     fill: #f76414;
   }
@@ -368,7 +362,6 @@ button:hover, button:focus, .button:hover, .button:focus {
   from {
     transform: translate(0px, 50px);
   }
-
   to {
     transform: translate(200px, 50px);
   }
@@ -386,31 +379,12 @@ button:hover, button:focus, .button:hover, .button:focus {
   from {
     transform: translate(446px, 48px);
   }
-
   to {
     transform: translate(100px, 48px);
   }
 }
 
 .cloud-back {
-  animation-duration: 30s;
-  animation-name: cloud-back-move;
-  animation-iteration-count: infinite;
-  animation-direction: alternate;
-  animation-timing-function: linear;
-}
-
-@keyframes airplane-move {
-  from {
-    transform: translate(10%, 20%);
-  }
-
-  to {
-    transform: translate(100px, 48px);
-  }
-}
-
-.airplane {
   animation-duration: 30s;
   animation-name: cloud-back-move;
   animation-iteration-count: infinite;
