--- a/style.production.css
+++ b/style.production.css
@@ -4,6 +4,7 @@
 * Autoprefixer: v10.4.7
 * Browsers: last 40 version
 */
+
 /* ###
 - redo the design info by choosing proper colours and fonts
 - when that is done, change
@@ -67,7 +68,7 @@ body {
 as opposed to adding it to the specified width */
 * {
   -webkit-box-sizing: border-box;
-  box-sizing: border-box;
+          box-sizing: border-box;
 }
 
 /* Styling the header within the body*/
@@ -80,26 +81,26 @@ as opposed to adding it to the specified width */
   width: 100%;
   -webkit-box-pack: justify;
   -webkit-justify-content: space-between;
-  -ms-flex-pack: justify;
-  justify-content: space-between;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
   -webkit-box-align: center;
   -webkit-align-items: center;
-  -ms-flex-align: center;
-  align-items: center;
+      -ms-flex-align: center;
+          align-items: center;
 }
 
 .page-header__item {
   -webkit-box-flex: 0;
   -webkit-flex: 0 1 200px;
-  -ms-flex: 0 1 200px;
-  flex: 0 1 200px;
+      -ms-flex: 0 1 200px;
+          flex: 0 1 200px;
 }
 
 .page-header .page-header__item:last-child {
   -webkit-box-flex: 1;
   -webkit-flex-grow: 1;
-  -ms-flex-positive: 1;
-  flex-grow: 1;
+      -ms-flex-positive: 1;
+          flex-grow: 1;
   text-align: right;
 }
 
@@ -115,11 +116,11 @@ as opposed to adding it to the specified width */
   font-size: var(--font-size-navigation__item);
   -webkit-box-flex: 1;
   -webkit-flex-grow: 1;
-  -ms-flex-positive: 1;
-  flex-grow: 1;
+      -ms-flex-positive: 1;
+          flex-grow: 1;
   -webkit-flex-shrink: 1;
-  -ms-flex-negative: 1;
-  flex-shrink: 1;
+      -ms-flex-negative: 1;
+          flex-shrink: 1;
 }
 
 /* This will remove the underline from the nav link of the active page*/
@@ -145,8 +146,8 @@ as opposed to adding it to the specified width */
   -webkit-box-orient: vertical;
   -webkit-box-direction: normal;
   -webkit-flex-direction: column;
-  -ms-flex-direction: column;
-  flex-direction: column;
+      -ms-flex-direction: column;
+          flex-direction: column;
   text-align: center;
 }
 
@@ -210,7 +211,7 @@ button, .button {
   color: var(--text-colour-light);
   padding: 10px;
   -webkit-border-radius: 3px;
-  border-radius: 3px;
+          border-radius: 3px;
   border-bottom: 2px solid rgba(0, 0, 0, 0.3);
   -webkit-transition: 0.3s opacity;
   -o-transition: 0.3s opacity;
@@ -242,7 +243,7 @@ button:hover, button:focus, .button:hover, .button:focus {
   width: 250px;
   height: auto;
   -webkit-border-radius: 50%;
-  border-radius: 50%;
+          border-radius: 50%;
   margin-bottom: 10px;
 }
 
@@ -251,8 +252,8 @@ button:hover, button:focus, .button:hover, .button:focus {
 .profile-section__paragraph {
   -webkit-box-flex: 1;
   -webkit-flex: 1 1 100px;
-  -ms-flex: 1 1 100px;
-  flex: 1 1 100px;
+      -ms-flex: 1 1 100px;
+          flex: 1 1 100px;
 }
 
 #text__fullstack-web-developer {
@@ -264,8 +265,8 @@ button:hover, button:focus, .button:hover, .button:focus {
 .about-section__paragraph {
   -webkit-box-flex: 1;
   -webkit-flex: 1 1 100px;
-  -ms-flex: 1 1 100px;
-  flex: 1 1 100px;
+      -ms-flex: 1 1 100px;
+          flex: 1 1 100px;
 }
 
 .about-section__table {
@@ -277,7 +278,7 @@ button:hover, button:focus, .button:hover, .button:focus {
 #contact-section__image {
   float: left;
   -webkit-border-radius: 3%;
-  border-radius: 3%;
+          border-radius: 3%;
   width: 300px;
   height: auto;
   margin-right: 30px;
@@ -287,8 +288,8 @@ button:hover, button:focus, .button:hover, .button:focus {
 .contact-section__paragraph {
   -webkit-box-flex: 1;
   -webkit-flex: 1 1 100px;
-  -ms-flex: 1 1 100px;
-  flex: 1 1 100px;
+      -ms-flex: 1 1 100px;
+          flex: 1 1 100px;
   font-size: large;
 }
 
@@ -340,7 +341,7 @@ button:hover, button:focus, .button:hover, .button:focus {
     /* maybe use #e6decb or #bfd9d7 */
     padding: 20px 30px 35px;
     -webkit-border-radius: 30px;
-    border-radius: 30px;
+            border-radius: 30px;
     width: auto;
     min-height: auto;
     margin: 0;
@@ -410,7 +411,6 @@ button:hover, button:focus, .button:hover, .button:focus {
     fill: #f76414;
   }
 }
-
 @keyframes sun-color-change {
   0% {
     fill: #edc655;
@@ -427,131 +427,110 @@ button:hover, button:focus, .button:hover, .button:focus {
 
 .sun {
   -webkit-animation-duration: 7s;
-  animation-duration: 7s;
+          animation-duration: 7s;
   -webkit-animation-name: sun-color-change;
-  animation-name: sun-color-change;
+          animation-name: sun-color-change;
   -webkit-animation-iteration-count: infinite;
-  animation-iteration-count: infinite;
+          animation-iteration-count: infinite;
   -webkit-animation-direction: alternate;
-  animation-direction: alternate;
+          animation-direction: alternate;
   -webkit-animation-timing-function: linear;
-  animation-timing-function: linear;
+          animation-timing-function: linear;
 }
 
 /* what am I doing wrong here?? I cannot animate the clouds*/
 @-webkit-keyframes cloud-front-moving {
   from {
     -webkit-transform: translate(0px, 50px);
-    transform: translate(0px, 50px);
+            transform: translate(0px, 50px);
   }
 
   to {
     -webkit-transform: translate(200px, 50px);
-    transform: translate(200px, 50px);
+            transform: translate(200px, 50px);
   }
 }
-
 @keyframes cloud-front-moving {
   from {
     -webkit-transform: translate(0px, 50px);
-    transform: translate(0px, 50px);
+            transform: translate(0px, 50px);
   }
 
   to {
     -webkit-transform: translate(200px, 50px);
-    transform: translate(200px, 50px);
+            transform: translate(200px, 50px);
   }
 }
 
 .cloud-front {
   -webkit-animation-duration: 30s;
-  animation-duration: 30s;
+          animation-duration: 30s;
   -webkit-animation-name: cloud-front-moving;
-  animation-name: cloud-front-moving;
+          animation-name: cloud-front-moving;
   -webkit-animation-iteration-count: infinite;
-  animation-iteration-count: infinite;
+          animation-iteration-count: infinite;
   -webkit-animation-direction: alternate;
-  animation-direction: alternate;
+          animation-direction: alternate;
   -webkit-animation-timing-function: linear;
-  animation-timing-function: linear;
+          animation-timing-function: linear;
 }
 
 @-webkit-keyframes cloud-back-move {
   from {
     -webkit-transform: translate(446px, 48px);
-    transform: translate(446px, 48px);
+            transform: translate(446px, 48px);
   }
 
   to {
     -webkit-transform: translate(100px, 48px);
-    transform: translate(100px, 48px);
+            transform: translate(100px, 48px);
   }
 }
 
 @keyframes cloud-back-move {
   from {
     -webkit-transform: translate(446px, 48px);
-    transform: translate(446px, 48px);
+            transform: translate(446px, 48px);
   }
 
   to {
     -webkit-transform: translate(100px, 48px);
-    transform: translate(100px, 48px);
+            transform: translate(100px, 48px);
   }
 }
 
 .cloud-back {
   -webkit-animation-duration: 30s;
-  animation-duration: 30s;
+          animation-duration: 30s;
   -webkit-animation-name: cloud-back-move;
-  animation-name: cloud-back-move;
+          animation-name: cloud-back-move;
   -webkit-animation-iteration-count: infinite;
-  animation-iteration-count: infinite;
+          animation-iteration-count: infinite;
   -webkit-animation-direction: alternate;
-  animation-direction: alternate;
+          animation-direction: alternate;
   -webkit-animation-timing-function: linear;
-  animation-timing-function: linear;
+          animation-timing-function: linear;
 }
 
-/*
-animation of hamburg skyline svg
----- why does it not work???????-----
-*/
 @-webkit-keyframes hamburg_skyline-fade-in {
-  0% {
-    opacity: 1;
-  }
-
-  50% {
-    opacity: 0.5;
-  }
-
-  100% {
-    opacity: 0;
-  }
+  0% {opacity: 1;}
+  50% {opacity: 0.5;}
+  100% {opacity: 0;}
 }
 
 @keyframes hamburg_skyline-fade-in {
-  0% {
-    opacity: 1;
-  }
-
-  50% {
-    opacity: 0.5;
-  }
-
-  100% {
-    opacity: 0;
-  }
+  0% {opacity: 1;}
+  50% {opacity: 0.5;}
+  100% {opacity: 0;}
 }
 
 #hamburg_skyline_svg {
   -webkit-animation-duration: 20s;
-  animation-duration: 20s;
+          animation-duration: 20s;
   -webkit-animation-name: hamburg_skyline-fade-in;
-  animation-name: hamburg_skyline-fade-in;
+          animation-name: hamburg_skyline-fade-in;
   -webkit-animation-iteration-count: infinite;
-  animation-iteration-count: infinite;
+          animation-iteration-count: infinite;
   -webkit-animation-timing-function: linear;
-  animation-timing-function: linear;
+          animation-timing-function: linear;
 }
