--- a/css/styles.css
+++ b/css/styles.css
@@ -406,7 +406,7 @@ button:hover, button:focus, .button:hover, .button:focus {
   100% {opacity: 0;}
 }
 
-#hamburg_skyline_svg {
+.hamburg_skyline_svg {
   animation-duration: 20s;
   animation-name: hamburg_skyline-fade-in;
   animation-iteration-count: infinite;
