--- a/css/style.production.css
+++ b/css/style.production.css
@@ -5,6 +5,7 @@
 * Browsers: last 40 version
 */
 
+
 /* ###
 - redo the design info by choosing proper colours and fonts
 - when that is done, change
@@ -519,17 +520,19 @@ button:hover, button:focus, .button:hover, .button:focus {
 }
 
 @keyframes hamburg_skyline-fade-in {
-  0% {opacity: 0;}
-  100% {opacity: 1;}
+  0% {opacity: 1;}
+  50% {opacity: 0.5;}
+  100% {opacity: 0;}
 }
 
 .hamburg_skyline_svg {
+  margin-left: 27%;
   -webkit-animation-duration: 20s;
           animation-duration: 20s;
   -webkit-animation-name: hamburg_skyline-fade-in;
           animation-name: hamburg_skyline-fade-in;
-  -webkit-animation-iteration-count: 1;
-          animation-iteration-count: 1;
+  -webkit-animation-iteration-count: infinite;
+          animation-iteration-count: infinite;
   -webkit-animation-timing-function: linear;
           animation-timing-function: linear;
 }
