--- a/css/styles.css
+++ b/css/styles.css
@@ -230,13 +230,11 @@ button:hover, button:focus, .button:hover, .button:focus {
 }
 
 /* Styling concerning just the contact page */
-#contact-section__image {
+.contact-section__svg {
   float: left;
-  border-radius: 3%;
-  width: 300px;
+  width: 360px;
   height: auto;
-  margin-right: 30px;
-  margin-bottom: 50px;
+  margin-bottom: 30px;
 }
 
 .contact-section__paragraph {
@@ -263,6 +261,10 @@ button:hover, button:focus, .button:hover, .button:focus {
 .work {
   margin: 20px;
   padding: 10px;
+}
+
+#my-work{
+  font-size: 72px;
 }
 
 /* This is the fallback option for the browsers that cannot use grid */
@@ -303,7 +305,7 @@ button:hover, button:focus, .button:hover, .button:focus {
   }
 }
 
-/* The following creates responsive design in ragards to screen width */
+/* The following creates responsive design in regards to screen width */
 @media all and (min-width: 500px) and (max-width:750px) {
   .project-list {
     grid-template-columns: 1fr 1fr;
@@ -336,70 +338,7 @@ button:hover, button:focus, .button:hover, .button:focus {
   }
 }
 
-/*
-###
-- styling for svg animation on about page, should be changed for final project as I want a different city attached to my site
-### //
-*/
-@keyframes sun-color-change {
-  0% {
-    fill: #edc655;
-  }
-
-  50% {
-    fill: #fcffad;
-  }
-
-  100% {
-    fill: #f76414;
-  }
-}
-
-.sun {
-  animation-duration: 7s;
-  animation-name: sun-color-change;
-  animation-iteration-count: infinite;
-  animation-direction: alternate;
-  animation-timing-function: linear;
-}
-
-/* what am I doing wrong here?? I cannot animate the clouds*/
-@keyframes cloud-front-moving {
-  from {
-    transform: translate(0px, 50px);
-  }
-
-  to {
-    transform: translate(200px, 50px);
-  }
-}
-
-.cloud-front {
-  animation-duration: 30s;
-  animation-name: cloud-front-moving;
-  animation-iteration-count: infinite;
-  animation-direction: alternate;
-  animation-timing-function: linear;
-}
-
-@keyframes cloud-back-move {
-  from {
-    transform: translate(446px, 48px);
-  }
-
-  to {
-    transform: translate(100px, 48px);
-  }
-}
-
-.cloud-back {
-  animation-duration: 30s;
-  animation-name: cloud-back-move;
-  animation-iteration-count: infinite;
-  animation-direction: alternate;
-  animation-timing-function: linear;
-}
-
+/* Styling the hamburg svg on home and about*/
 @keyframes hamburg_skyline-fade-in {
   0% {opacity: 0;}
   50% {opacity: 0.5;}
@@ -416,4 +355,25 @@ button:hover, button:focus, .button:hover, .button:focus {
 
 #hamburg_skyline_svg_about {
   margin-left: 5%;
+}
+
+
+/*stying the logo svg on contact*/
+@keyframes network-zoom-in {
+  0% {
+    transform-origin: center;
+    transform: scale(0);
+  }
+  50% {
+    transform-origin: center;
+    transform: scale(1.2);
+  }
+  100% {
+    transform-origin: center;
+    transform: scale(1);
+  }
+}
+
+.network {
+ animation: network-zoom-in 12s ease-in 1;
 }
