--- a/css/styles.css
+++ b/css/styles.css
@@ -100,6 +100,10 @@ as opposed to adding it to the specified width */
   text-decoration: none;
 }
 
+.language-icon-img {
+  width: 20px;
+  height: 20px;
+}
 
 /* This styles the logo within each header */
 #header-image__logo {
