--- a/css/styles.css
+++ b/css/styles.css
@@ -345,6 +345,20 @@ button:focus,
   }
 }
 
+.svg {
+  width: 100%;
+  height: auto;
+  flex-grow: 1;
+  flex-shrink: 1;
+  min-width: 200px;
+  min-height: auto;
+  max-width: 700px;
+  max-height: auto;
+  display: flex;
+  justify-content: space-around;
+  align-items: flex-end;
+}
+
 /* Styling the hamburg svg on home and about */
 @keyframes hamburg_skyline-fade-in {
   0% { opacity: 0; }
@@ -353,7 +367,6 @@ button:focus,
 }
 
 .hamburg_skyline_svg {
-  margin-left: 35%;
   animation-duration: 10s;
   animation-name: hamburg_skyline-fade-in;
   animation-iteration-count: 1;
